[workspace]
members = [
  "contracts/eqa_token", 
  "contracts/collateral_manager", 
  "contracts/liquidation_engine", 
  "contracts/arbitrage_module", 
  "contracts/governance",
  "contracts/eqa_oracle",
  "contracts/registry"
]

[package]
name = "equilibria-smart-contracts"
version = "0.1.1"
edition = "2021"

[dependencies]
cosmwasm-std = "1.1.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
serde_json = "1.0"
cosmwasm-schema = "1.1.0"
cosmwasm-vm = "1.1.0"
cosmwasm-storage = "1.0.0"
cw20 = "0.13.4"
registry = { path = "contracts/registry" }
collateral_manager = { path = "contracts/collateral_manager" }
