[package]
name = "eqa_oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
cw-storage-plus = "0.13.4"
terra-cosmwasm = { version = "2.2.0", optional = true }
equilibria-smart-contracts = { path = "../.." }

[features]
# Make terra-cosmwasm an optional dependency that's only used in production
default = []
terra-integration = ["terra-cosmwasm"]
